force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/sf_devops__Work_Item__c.object-meta.xml
<CustomObject>
    <description>A work item keeps track of things that a builder will work on.</description>
    <label>Work Item</label>
    <nameField>
        <displayFormat>WI-{000000}</displayFormat>
        <label>Work Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>