force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/fields/sf_devops__Branch_Parent_Remote_Reference__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Branch_Parent_Remote_Reference__c</fullName>
    <description>This field is deprecated and should not be referenced</description>
    <label>Branch Parent Remote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>