force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/fields/sf_devops__Concluded__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Concluded__c</fullName>
    <description>Has this Work Item transitioned to a conclusive state?</description>
    <inlineHelpText>Managed by the DevOps Center, this field indicates that a Work Item has finished being used for active development or promotion.</inlineHelpText>
    <label>Concluded</label>
    <length>8</length>
    <type>Text</type>
</CustomField>