force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/fields/sf_devops__Cross_Environment_Combination__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Cross_Environment_Combination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this work item is the survivor of a combination operation where metadata came from multiple development environments.  This needs to be treated differently during a back sync.</description>
    <label>Cross Environment Combination</label>
    <type>Checkbox</type>
</CustomField>