force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/fields/sf_devops__Development_Environment__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Development_Environment__c</fullName>
    <description>The environment in which this Work Item record was developed.</description>
    <formula>IF(ISBLANK(sf_devops__Promoted_From_Environment__r.Name),  sf_devops__Environment__r.Name, sf_devops__Promoted_From_Environment__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The environment in which this Work Item record was developed.</inlineHelpText>
    <label>Development Environment</label>
    <type>Text</type>
</CustomField>