force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/fields/sf_devops__Operation_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Operation_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The AOR referencing the current ongoing operation of this work item.</description>
    <label>Operation Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>