force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/fields/sf_devops__Review_Remote_Reference__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Review_Remote_Reference__c</fullName>
    <label>Review Remote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>