force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/fields/sf_devops__Subject__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Subject__c</fullName>
    <description>The subject summarizes what this work item is trying to accomplish.</description>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>