force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Approved_By_Without_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Approved_By_Without_Approved</fullName>
    <active>true</active>
    <description>Enforce Approved is set if Approved_By is set.</description>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Development_Approved__c),
ISCHANGED(sf_devops__Development_Approved_By__c)
),
NOT(sf_devops__Development_Approved__c),
NOT(ISBLANK( sf_devops__Development_Approved_By__c  ))

)</errorConditionFormula>
    <errorMessage>A Work_Item can not have Development_Approved_By set if it is not Development_Approved.</errorMessage>
</ValidationRule>