force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Approved_Without_Approved_By.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Approved_Without_Approved_By</fullName>
    <active>true</active>
    <description>Enforce ApprovedBy is set if this item is approved.</description>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Development_Approved__c),
ISCHANGED(sf_devops__Development_Approved_By__c)
),
sf_devops__Development_Approved__c,
ISBLANK( sf_devops__Development_Approved_By__c  )

)</errorConditionFormula>
    <errorMessage>You must set Development_Approved_By when this Work Item is approved.</errorMessage>
</ValidationRule>