force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Change_Bundle_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Change_Bundle_Project</fullName>
    <active>true</active>
    <description>Enforce we belong to the same project as our change bundle.</description>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Change_Bundle__c)
),
NOT(ISBLANK(sf_devops__Change_Bundle__c)),
sf_devops__Project__c &lt;&gt; sf_devops__Change_Bundle__r.sf_devops__Project__c

)</errorConditionFormula>
    <errorMessage>A Work Item must belong to the same project as its Change Bundle.</errorMessage>
</ValidationRule>