force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Combined_Bundled.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Combined_Bundled</fullName>
    <active>true</active>
    <description>Verifies that a Combined work item cannot be part of a bundle</description>
    <errorConditionFormula>AND(
    OR (ISCHANGED(sf_devops__Concluded__c), ISCHANGED(sf_devops__Change_Bundle__c) ),
    sf_devops__Concluded__c = &quot;COMBINED&quot;,
    NOT(ISBLANK(sf_devops__Change_Bundle__c))
 )</errorConditionFormula>
    <errorMessage>A Work Item cannot be Combined if it is in a bundle.</errorMessage>
</ValidationRule>