force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Combined_Not_Combined_With.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Combined_Not_Combined_With</fullName>
    <active>true</active>
    <description>Verifies that a Combined work item must have Combined_With also set</description>
    <errorConditionFormula>AND(
    OR (ISCHANGED(sf_devops__Concluded__c), ISCHANGED(sf_devops__Combined_With__c) ),
    sf_devops__Concluded__c = &quot;COMBINED&quot;,
    ISBLANK(sf_devops__Combined_With__c)
 )</errorConditionFormula>
    <errorMessage>A Work Item cannot be Combined if it does not reference the work item it is combined into.</errorMessage>
</ValidationRule>