force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Combined_Not_Promoted.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Combined_Not_Promoted</fullName>
    <active>true</active>
    <description>Verifies that a Combined work item must have been promoted</description>
    <errorConditionFormula>AND(
    OR (ISCHANGED(sf_devops__Concluded__c), ISCHANGED(sf_devops__Promoted__c) ),
    sf_devops__Concluded__c = &quot;COMBINED&quot;,
    NOT(sf_devops__Promoted__c)
 )</errorConditionFormula>
    <errorMessage>A Work Item cannot be Combined if it has never been promoted.</errorMessage>
</ValidationRule>