force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Combined_With_Not_Combined.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Combined_With_Not_Combined</fullName>
    <active>true</active>
    <description>Verifies that if Combined_With is set, the work item must be in the combined state</description>
    <errorConditionFormula>AND(
    OR (ISCHANGED(sf_devops__Concluded__c), ISCHANGED(sf_devops__Combined_With__c) ),
    OR(ISBLANK(sf_devops__Concluded__c), NOT(sf_devops__Concluded__c = &quot;COMBINED&quot;)),
    NOT(ISBLANK(sf_devops__Combined_With__c))
 )</errorConditionFormula>
    <errorMessage>A Work Item cannot have Combined_With set if it is not in the Combined state.</errorMessage>
</ValidationRule>