force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Concluded_values.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Concluded_values</fullName>
    <active>true</active>
    <description>Verifies that Concluded_c is assigned with a possible value.</description>
    <errorConditionFormula>NOT(OR( sf_devops__Concluded__c = &quot;CLOSED&quot;, sf_devops__Concluded__c = &quot;NEVERED&quot;, sf_devops__Concluded__c = &quot;COMBINED&quot;, ISBLANK(sf_devops__Concluded__c)))</errorConditionFormula>
    <errorMessage>Possible values for Concluded_c are : CLOSED, NEVERED, COMBINED, or empty.</errorMessage>
</ValidationRule>