force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Disable_Concluded.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Disable_Concluded</fullName>
    <active>true</active>
    <description>A Work Item cannot have its Concluded__c field changed after being set to NEVER, COMBINED or CLOSED.</description>
    <errorConditionFormula>AND(ISCHANGED(sf_devops__Concluded__c),NOT(ISBLANK(PRIORVALUE(sf_devops__Concluded__c))))</errorConditionFormula>
    <errorMessage>A Work Item cannot have its Concluded__c field changed once set.</errorMessage>
</ValidationRule>