force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Disable_Promoted.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Disable_Promoted</fullName>
    <active>true</active>
    <description>A Work Item cannot have its Promoted__c field disabled once set.</description>
    <errorConditionFormula>AND(PRIORVALUE(sf_devops__Promoted__c), ISCHANGED(sf_devops__Promoted__c))</errorConditionFormula>
    <errorMessage>A Work Item cannot have its Promoted__c field disabled once set.</errorMessage>
</ValidationRule>