force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Environment_Expired.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Environment_Expired</fullName>
    <active>true</active>
    <description>Enforce we only reference environments that are not expired.</description>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Environment__c)
),
NOT(ISBLANK( sf_devops__Environment__c  )),
sf_devops__Environment__r.sf_devops__Expired__c

)</errorConditionFormula>
    <errorMessage>Work Items cannot be connected to expired environments.</errorMessage>
</ValidationRule>