force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Environment_Requires_Tracking.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Environment_Requires_Tracking</fullName>
    <active>true</active>
    <description>Enforce we only reference environments with source tracking.</description>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Environment__c)
),
NOT(ISBLANK( sf_devops__Environment__c  )),
NOT(sf_devops__Environment__r.sf_devops__Can_Track_Changes__c)

)</errorConditionFormula>
    <errorMessage>Cannot reference environment that does not support change tracking.</errorMessage>
</ValidationRule>