force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Promoted_And_Installed.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Promoted_And_Installed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(
    ISNEW(),
    ISCHANGED( sf_devops__Promoted__c ),
    ISCHANGED(  sf_devops__Change_Bundle__c  )
 ),
 NOT(sf_devops__Promoted__c), 
 NOT (ISBLANK(sf_devops__Change_Bundle__c))
)</errorConditionFormula>
    <errorMessage>A Work_Item cannot be a member of a Change_Bundle if it has never been promoted.</errorMessage>
</ValidationRule>