force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Promoted_On_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Promoted_On_Create</fullName>
    <active>true</active>
    <description>Enforce we cannot create a work item with Promoted__c set.</description>
    <errorConditionFormula>AND(
ISNEW(),
sf_devops__Promoted__c

)</errorConditionFormula>
    <errorMessage>You cannot create a Work_Item with the Promoted flag set.</errorMessage>
</ValidationRule>