force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Promoted_Without_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Promoted_Without_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
    ISNEW(),
    ISCHANGED(sf_devops__Development_Approved__c),
    ISCHANGED(sf_devops__Promoted__c)
 ), 
   NOT (sf_devops__Development_Approved__c) ,
   sf_devops__Promoted__c 
 
 )</errorConditionFormula>
    <errorMessage>A WorkItem cannot be promoted if it is not Approved.</errorMessage>
</ValidationRule>