force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__PromotedFromEnvironment_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__PromotedFromEnvironment_Changed</fullName>
    <active>true</active>
    <description>A Work Item cannot have its Promoted_From_Environment__c field changed once set.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(PRIORVALUE(sf_devops__Promoted_From_Environment__c))), ISCHANGED(sf_devops__Promoted_From_Environment__c))</errorConditionFormula>
    <errorMessage>A Work Item cannot have its Promoted_From_Environment__c field changed once set.</errorMessage>
</ValidationRule>