force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Rebase_Branch.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Rebase_Branch</fullName>
    <active>true</active>
    <description>Rebase_Branch__c can be set only on a promoted , unbundled, and not concluded Work_Item__c.</description>
    <errorConditionFormula>AND( OR( ISNEW() , ISCHANGED( sf_devops__Rebase_Branch__c ) , ISCHANGED( sf_devops__Change_Bundle__c ) , ISCHANGED( sf_devops__Concluded__c ) , ISCHANGED( sf_devops__Promoted__c ) ) , NOT ( ISBLANK(  sf_devops__Rebase_Branch__c  ) ), 
OR( NOT (  sf_devops__Promoted__c  ) , NOT ( ISBLANK (  sf_devops__Change_Bundle__c  ) ) , NOT ( ISBLANK( sf_devops__Concluded__c) ) ) )</errorConditionFormula>
    <errorMessage>A Work Item cannot have its Rebase Branch field set if it is un-promoted, bundled or concluded.</errorMessage>
</ValidationRule>