force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item__c/validationRules/sf_devops__Review_Without_Remote_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Review_Without_Remote_Reference</fullName>
    <active>false</active>
    <description>This rule is no longer enforced</description>
    <errorConditionFormula>FALSE</errorConditionFormula>
    <errorMessage>Deprecated</errorMessage>
</ValidationRule>